--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@
 /public/assets
 
 # Ignore master key for decrypting credentials and more.
-/config/master.key
+#/config/master.key
 
 /app/assets/builds/*
 !/app/assets/builds/.keep
@@ -41,4 +41,4 @@
 
 /node_modules
 
-/config/credentials/production.key
+#/config/credentials/production.key
