--- a/package.json
+++ b/package.json
@@ -13,16 +13,25 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.4",
+    "@popperjs/core": "^2.11.8",
     "@rails/activestorage": "^7.1.3-2",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.2",
     "chartkick": "^5.0.1",
     "esbuild": "^0.20.2",
     "flowbite": "^2.3.0",
     "flowbite-datepicker": "^1.2.6",
     "fontawesome": "^5.6.3",
-    "jquery": "^3.7.1"
+    "jquery": "^3.7.1",
+    "pnpm": "^9.2.0",
+    "sass": "^1.77.4",
+    "tailwindcss": "^3.4.4",
+    "userland": "^0.4.1"
   },
   "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets"
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=/assets",
+    "build:css": "yarn build:tailwind && yarn build:bootstrap",
+    "build:tailwind": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify",
+    "build:bootstrap": "sass ./app/assets/stylesheets/admin.scss ./app/assets/builds/admin.css --no-source-map --load-path=node_modules"
   }
 }
