--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fullhuman/postcss-purgecss": "^6.0.0",
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.4",
+    "@rails/actiontext": "^7.1.3-4",
     "@rails/activestorage": "^7.1.3-2",
     "chart.js": "^4.4.2",
     "chartkick": "^5.0.1",
@@ -24,6 +25,7 @@
     "jquery": "^3.7.1",
     "pnpm": "^9.2.0",
     "tailwindcss": "^3.4.4",
+    "trix": "^2.1.1",
     "userland": "^0.4.1"
   },
   "scripts": {
