--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hotwired/turbo-rails": "^8.0.4",
     "@rails/actiontext": "^7.1.3-4",
     "@rails/activestorage": "^7.1.3-2",
+    "animate.css": "^4.1.1",
     "chart.js": "^4.4.2",
     "chartkick": "^5.0.1",
     "esbuild": "^0.20.2",
@@ -26,7 +27,8 @@
     "pnpm": "^9.2.0",
     "tailwindcss": "^3.4.4",
     "trix": "^2.1.1",
-    "userland": "^0.4.1"
+    "userland": "^0.4.1",
+    "wow.js": "^1.2.2"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=/assets",
