--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "tailwindcss": "^3.4.4",
     "trix": "^2.1.1",
     "userland": "^0.4.1",
-    "wow.js": "^1.2.2"
+    "wow.js": "^1.2.2",
+    "wowjs": "^1.1.3"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=/assets",
