--- a/config/infold/order.yml
+++ b/config/infold/order.yml
@@ -6,7 +6,9 @@ model:
       - presence
     paid:
       - presence
-    deadline:
+    dead_date:
+      - presence
+    dead_time:
       - presence
 
   association:
