--- a/config/storage.yml
+++ b/config/storage.yml
@@ -6,6 +6,10 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
+development:
+  service: Disk
+  root: <%= Rails.root.join("storage") %>
+
 staging:
   service: Disk
   root: <%= Rails.root.join("tmp/storage") %>
