--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
     "@hotwired/turbo-rails": "^8.0.4",
     "@rails/actiontext": "^7.1.3-4",
     "@rails/activestorage": "^7.1.3-2",
-    "animate.css": "^4.1.1",
     "chart.js": "^4.4.2",
     "chartkick": "^5.0.1",
     "esbuild": "^0.20.2",
-    "flowbite": "^2.3.0",
+    "flowbite": "^2.4.1",
     "flowbite-datepicker": "^1.2.6",
     "fontawesome": "^5.6.3",
     "jquery": "^3.7.1",
     "pnpm": "^9.2.0",
+    "strip-ansi": "^7.1.0",
+    "strip-ansi-cjs": "^8.0.0",
     "tailwindcss": "^3.4.4",
     "trix": "^2.1.1",
     "userland": "^0.4.1",
