--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fullhuman/postcss-purgecss": "^6.0.0",
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.4",
     "@rails/actiontext": "^7.1.3-4",
@@ -36,6 +35,10 @@
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=/assets",
     "build:css": "yarn build:tailwind && yarn build:bootstrap",
     "build:tailwind": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify",
-    "build:bootstrap": "sass ./app/assets/stylesheets/admin.scss ./app/assets/builds/admin.css --no-source-map --load-path=node_modules"
+    "build:bootstrap": "sass ./app/assets/stylesheets/admin.scss ./app/assets/builds/admin.css --no-source-map --load-path=node_modules",
+    "build:purgecss": "npx purgecss --config ./purgecss.config.cjs"
+  },
+  "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^6.0.0"
   }
 }
