--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "flowbite-datepicker": "^1.2.6",
     "fontawesome": "^5.6.3",
     "jquery": "^3.7.1",
-    "pnpm": "^9.2.0",
+    "pnpm": "^9.5.0",
+    "postcss": "^8.4.39",
     "strip-ansi": "^7.1.0",
     "strip-ansi-cjs": "^8.0.0",
     "tailwindcss": "^3.4.4",
