--- a/config/storage.yml
+++ b/config/storage.yml
@@ -16,7 +16,7 @@ staging:
 
 production:
   service: Disk
-  root: <%= Rails.root.join("../shared/storage") %>
+  root: <%= Rails.root.join("./druzhba/shared/storage") %>
 
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
