--- a/config/storage.yml
+++ b/config/storage.yml
@@ -16,7 +16,7 @@ staging:
 
 production:
   service: Disk
-  root: <%= Rails.root.join("$HOME/shared/storage") %>
+  root: <%= Rails.root.join("/home/deploy/druzhba/shared/storage") %>
 
 #/home/deploy/druzhba/shared
 
