--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "build:purgecss": "npx purgecss --config ./purgecss.config.cjs"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^6.0.0"
+    "@fullhuman/postcss-purgecss": "^6.0.0",
+    "tailwindcss": "^3.4.4"
   }
 }
