--- a/package.json
+++ b/package.json
@@ -18,9 +18,6 @@
     "chart.js": "^4.4.2",
     "chartkick": "^5.0.1",
     "esbuild": "^0.20.2",
-    "flowbite": "^2.4.1",
-    "flowbite-datepicker": "^1.2.6",
-    "fontawesome": "^5.6.3",
     "jquery": "^3.7.1",
     "pnpm": "^9.5.0",
     "postcss": "^8.4.39",
@@ -29,8 +26,7 @@
     "tailwindcss": "^3.4.4",
     "trix": "^2.1.1",
     "userland": "^0.4.1",
-    "wow.js": "^1.2.2",
-    "wowjs": "^1.1.3"
+    "wow.js": "^1.2.2"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=/assets",
