--- a/package.json
+++ b/package.json
@@ -15,18 +15,15 @@
     "@hotwired/turbo-rails": "^8.0.4",
     "@rails/actiontext": "^7.1.3-4",
     "@rails/activestorage": "^7.1.3-2",
-    "chart.js": "^4.4.2",
     "chartkick": "^5.0.1",
     "esbuild": "^0.20.2",
     "jquery": "^3.7.1",
-    "pnpm": "^9.5.0",
     "postcss": "^8.4.39",
     "strip-ansi": "^7.1.0",
     "strip-ansi-cjs": "^8.0.0",
     "tailwindcss": "^3.4.4",
     "trix": "^2.1.1",
-    "userland": "^0.4.1",
-    "wow.js": "^1.2.2"
+    "userland": "^0.4.1"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=/assets",
