--- a/config/infold/expense_category.yml
+++ b/config/infold/expense_category.yml
@@ -7,7 +7,7 @@ model:
     flow:
       - presence
   association:
-    money_flow_details:
+    expense_details:
       kind: has_many
       dependent: destroy
   enum:
