--- a/test/fixtures/money_flow_details.yml
+++ b/test/fixtures/money_flow_details.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  money_flow: one
-  money_flow_category: one
+  expense: one
+  expense_category: one
 
 two:
-  money_flow: two
-  money_flow_category: two
+  expense: two
+  expense_category: two
