--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hotwired/turbo-rails": "^8.0.4",
     "@rails/actiontext": "^7.1.3-4",
     "@rails/activestorage": "^7.1.3-2",
+    "bootstrap": "^5.3.3",
     "chartkick": "^5.0.1",
     "esbuild": "^0.20.2",
     "jquery": "^3.7.1",
@@ -23,7 +24,7 @@
     "strip-ansi-cjs": "^8.0.0",
     "tailwindcss": "^3.4.4",
     "trix": "^2.1.1",
-    "userland": "^0.4.1"
+    "userland": "^0.4.3"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=/assets",
