--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.4",
+    "@popperjs/core": "^2.11.8",
     "@rails/actiontext": "^7.1.3-4",
     "@rails/activestorage": "^7.1.3-2",
     "bootstrap": "^5.3.3",
