--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@rails/actiontext": "^7.1.3-4",
     "@rails/activestorage": "^7.1.3-2",
     "chartkick": "^5.0.1",
-    "esbuild": "^0.20.2",
+    "esbuild": "^0.24.0",
+    "flowbite": "^2.5.2",
     "jquery": "^3.7.1",
     "js-cookie": "^3.0.5",
+    "marked": "^14.1.3",
     "postcss": "^8.4.39",
     "strip-ansi": "^7.1.0",
     "strip-ansi-cjs": "^8.0.0",
