--- a/package.json
+++ b/package.json
@@ -10,17 +10,23 @@
     "@hotwired/turbo-rails": "^8.0.4",
     "@rails/actiontext": "^7.1.3-4",
     "@rails/activestorage": "^7.1.3-2",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/container-queries": "^0.1.1",
+    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.15",
+    "autoprefixer": "^10.4.20",
+    "bootstrap": "^5.3.3",
     "chartkick": "^5.0.1",
     "esbuild": "^0.24.0",
     "flowbite": "^2.5.2",
+    "flowbite-datepicker": "^1.3.0",
     "js-cookie": "^3.0.5",
-    "marked": "^14.1.3",
     "postcss": "^8.4.39",
-    "strip-ansi": "^7.1.0",
-    "strip-ansi-cjs": "^8.0.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^16.1.0",
+    "postcss-preset-env": "^10.0.7",
     "tailwindcss": "^3.4.4",
-    "trix": "^2.1.1",
-    "userland": "^0.4.3"
+    "trix": "^2.1.1"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=/assets --minify",
